tests/paczka1/small_fuzzy/20721740.err
Error in line 2: v3Oo2Ll S334 14,0
Error in line 9: CAei9PCX832 A596 21,5
Error in line 1: YVZFDOE A747 19,1
